public/styles/site/layout.less
#footer {
	// margin-top: 30px;
	border-top: 1px solid #eeeeee;
	padding-top: 2vw;
	color: #777777;
	// position: relative;
	background-color: #ffffe5;
	// bottom: 0;
	text-indent: 5vw;
	margin-bottom: 0;
	padding-bottom: .5vw;
	width: 100% !important;
}

#footer p{
	font-size: 1.3vw;
}

// .gallery-image img {
//     display: block;
//     max-width: 100%;
//     height: auto;
// }

.topJHS img{
	width: 100%;
	position: relative;
}

#name{
	position: relative;
	top: 8%;
	// left: 22%;
	text-align: center;
	color: white;
	font-size: 8vw;
}

#line1{
	position: relative;
	top: 6%;
	background: white;
	width: 70%;
	height: 3px;
	display: block;
  margin-left: auto;
  margin-right: auto;
}

.line2{
	position: relative;
	top: 8%;
	background: white;
	width: 70%;
	height: 3px;
	display: block;
  margin-left: auto;
  margin-right: auto;
}

.dev{
	position: relative;
	top: 10%;
	// left: 8%;
	text-align: center;
	color: white;
	font-size: 2.5vw;
}

.line3{
	position: relative;
	top: 0;
	background: rgb(250,72,46);
	width: 100%;
	height: .5vw;
}

// .line4{
// 	position: absolute;
// 	background: rgb(250,72,46);
// 	width: 100%;
// 	height: 6px;
// 	top: 121.5vw;
// }

.circle{
	width: 22vw;
	height: 22vw;
	position: relative;
	background-color: #ffffe5;
	// background-image: url("/images/gold/Gold-Texture30.jpg");
	top: -12vw;
	border-radius: 50%;
	display: block;
  margin-left: auto;
  margin-right: auto;
	box-shadow: 2px 2px 2px 2px rgb(250,72,46);
}

#me{
	width: 80%;
	position: relative;
	top: 6%;
	left: 6%;
	border-radius: 50%;
	z-index: 998 !important;
}

.logo{
	width: 100%;
	position: absolute;
	top: 0;
	height: 40%;
	// text-align: center;
}

.greeting h1{
	// text-align: center;
	font-size: 5vw;
	// color: #65625f;
	color: #543005;

}

.greeting{
	padding-top: 10vw;
	padding-bottom: 2vw;
	// position: relative;
	text-align: center;
	// background-color: #f7f7f7;
	background-color: #ffffe5;
}

.greeting h3{
	width: 80%;
	color: #8c510a;
	// display: block;
  margin-left: auto;
  margin-right: auto;
	font-size: 2vw;
}

.greeting p{
	width: 90%;
	color: #8c510a;
	// color: #898582;
	// display: block;
  margin-left: auto;
  margin-right: auto;
	font-size: 1.4vw;
}

.coffee{
	width: 100%;
	// position: relative;
	// top: 84vw;
	height: 100%;
	// display: inline-block !important;
}

.coffee img{
	width: 100%;
	position: relative;
	// top: 14vw;
	// height: 100%;
}

#Discipline{
	position: relative;
	color: white;
	font-size: 5vw;
	left: 50vw;
	top: -36vw;
	display: inline;
}

@keyframes blinker {
  70% { opacity: 0.0; }
}

#Creative{
	position: relative;
	color: white;
	font-size: 5vw;
	left: 55vw;
	top: -6vw;
	display: inline;
	animation: blinker 15s linear infinite;
	-webkit-animation: blinker 15s linear infinite;
  -moz-animation: blinker 15s linear infinite;
}

#Passion{
	position: relative;
	color: white;
	font-size: 5vw;
	left: -25vw;
	top: -12vw;
	display: inline;
	animation: blinker 20s linear infinite;
	-webkit-animation: blinker 20s linear infinite;
  -moz-animation: blinker 20s linear infinite;
}

#Diplomatic{
	position: relative;
	color: white;
	font-size: 3vw;
	left: -40vw;
	top: -32vw;
	display: inline;
	animation: blinker 25s linear infinite;
	-webkit-animation: blinker 25s linear infinite;
  -moz-animation: blinker 25s linear infinite;
}

#Leader{
	position: relative;
	color: white;
	font-size: 3vw;
	left: -75vw;
	top: -36vw;
	display: inline;
	animation: blinker 22s linear infinite;
	-webkit-animation: blinker 22s linear infinite;
  -moz-animation: blinker 22s linear infinite;
}

#Obsessive{
	position: relative;
	color: white;
	font-size: 3vw;
	left: 42vw;
	top: -10vw;
	display: inline;
	animation: blinker 10s linear infinite;
	-webkit-animation: blinker 10s linear infinite;
  -moz-animation: blinker 10s linear infinite;
}

#Dedicated{
	position: relative;
	color: white;
	font-size: 3vw;
	left: -4vw;
	top: -28vw;
	display: inline;
	animation: blinker 14s linear infinite;
	-webkit-animation: blinker 14s linear infinite;
  -moz-animation: blinker 14s linear infinite;
}

#Strong{
	position: relative;
	color: white;
	font-size: 3vw;
	left: 50vw;
	top: -32vw;
	display: inline;
	animation: blinker 24s linear infinite;
	-webkit-animation: blinker 24s linear infinite;
  -moz-animation: blinker 24s linear infinite;
}

#Independent{
	position: relative;
	color: white;
	font-size: 3vw;
	left: 12vw;
	top: -22vw;
	display: inline;
	animation: blinker 16s linear infinite;
	-webkit-animation: blinker 16s linear infinite;
  -moz-animation: blinker 16s linear infinite;
}

// #Professional{
// 	position: relative;
// 	color: white;
// 	font-size: 3vw;
// 	left: 22vw;
// 	top: -12vw;
// 	display: inline;
// 	animation: blinker 14s linear infinite;
// }

#Reliable{
	position: relative;
	color: white;
	font-size: 3vw;
	left: -60vw;
	top: -12vw;
	display: inline;
}

#Honest{
	position: relative;
	color: white;
	font-size: 1.5vw;
	left: -22vw;
	top: -16vw;
	display: inline;
	animation: blinker 22s linear infinite;
	-webkit-animation: blinker 22s linear infinite;
  -moz-animation: blinker 22s linear infinite;
}

#Personable{
	position: relative;
	color: white;
	font-size: 1.5vw;
	left: 6vw;
	top: -42vw;
	display: inline;
	animation: blinker 10s linear infinite;
	-webkit-animation: blinker 10s linear infinite;
  -moz-animation: blinker 10s linear infinite;
}

#Constructive{
	position: relative;
	color: white;
	font-size: 1.5vw;
	left: -5vw;
	top: -25vw;
	display: inline;
	animation: blinker 28s linear infinite;
	-webkit-animation: blinker 28s linear infinite;
  -moz-animation: blinker 28s linear infinite;
}

#Imaginative{
	position: relative;
	color: white;
	font-size: 1.5vw;
	left: 66vw;
	top: -38vw;
	display: inline;
	animation: blinker 24s linear infinite;
	-webkit-animation: blinker 24s linear infinite;
  -moz-animation: blinker 24s linear infinite;
}

#Forward-Thinking{
	position: relative;
	color: white;
	font-size: 1.5vw;
	left: 48vw;
	top: -32vw;
	display: inline;
	animation: blinker 26s linear infinite;
	-webkit-animation: blinker 26s linear infinite;
  -moz-animation: blinker 26s linear infinite;
}

#Result-Driven{
	position: relative;
	color: white;
	font-size: 1.5vw;
	left: 6vw;
	top: -30vw;
	display: inline;
	animation: blinker 14s linear infinite;
	-webkit-animation: blinker 14s linear infinite;
  -moz-animation: blinker 14s linear infinite;
}

#Friendly{
	position: relative;
	color: white;
	font-size: 1.5vw;
	left: -10vw;
	top: -44vw;
	display: inline;
	animation: blinker 22s linear infinite;
	-webkit-animation: blinker 22s linear infinite;
  -moz-animation: blinker 22s linear infinite;
}

#Polarizing{
	position: relative;
	color: white;
	font-size: 1.5vw;
	left: 1vw;
	top: -35vw;
	display: inline;
	animation: blinker 20s linear infinite;
	-webkit-animation: blinker 20s linear infinite;
  -moz-animation: blinker 20s linear infinite;
}

#Trustworthy{
	position: relative;
	color: white;
	font-size: 1.5vw;
	left: 33vw;
	top: -21vw;
	display: inline;
	animation: blinker 18s linear infinite;
	-webkit-animation: blinker 18s linear infinite;
  -moz-animation: blinker 18s linear infinite;
}

#Smart{
	position: relative;
	color: white;
	font-size: 1.5vw;
	left: -44vw;
	top: -25vw;
	display: inline;
	animation: blinker 12s linear infinite;
	-webkit-animation: blinker 12s linear infinite;
  -moz-animation: blinker 12s linear infinite;
}

.fadeText{
	position: absolute;
	width: 100%;
	display: inline-block;
}

.tech{
	text-align: center;
	// background-color: #f7f7f7;
	background-color: #ffffe5;
	padding-bottom: 5vw;
	padding-top: 3vw;
}

.tech h1{
	font-size: 5vw;
	margin: 2vw;
	color: #543005;
}

.tech h4{
	font-size: 3vw;
	margin: 2vw;
	color: #8c510a;
}

.tile {
  // width: 100%;
	display: inline-block;
	// box-sizing: border-box;
	background: #fff;
	height: 8vw;
	width: 16vw;
	// float: left;
	text-align: center;
	border-radius: 2vw 2vw 2vw 2vw;
}

.tile h3{
	font-size: 2vw;
	margin-top: 3vw;
}

.tileRow{
	width: 90%;
	text-align: center;
	padding-bottom: 2vw;
	height: 100%;
	display: inline-block;
	margin-left: auto;
  margin-right: auto;
}

.position{
	float: left;
	width: 20%;
	text-align: center;

}

.t1{
	background-color: #800026;
	color: #ffffe5;
}

.t2{
	background-color: #bd0026;
	color: #ffffe5;
}

.t3{
	background-color: #e31a1c;
	color: #ffffe5;
}

.t4{
	background-color: #fc4e2a;
	color: #ffffe5;
}

.t5{
	background-color: #fd8d3c;
	color: #ffffe5;
}

.t6{
	background-color: #feb24c;
	color: #ffffe5;
}

.t7{
	background-color: #fc4e2a;
	color: #ffffe5;
}

.t8{
	// background-color: #ffeda0;
	background-color: #bd0026;
	color: #ffffe5;
}

.t9{
	background-color: #fc4e2a;
	color: #ffffe5;
}

.t10{
	background-color: #feb24c;
	color: #ffffe5;
}

.t11{
	background-color: #fd8d3c;
	color: #ffffe5;
}

.t12{
	background-color: #fc4e2a;
	color: #ffffe5;
}

.t13{
	background-color: #e31a1c;
	color: #ffffe5;
}

.t14{
	background-color: #bd0026;
	color: #ffffe5;
}

.t15{
	background-color: #800026;
	color: #ffffe5;
}

.port{
	text-align: center;
	background-color: #ffffe5;
	padding-bottom: 5vw;
	margin-top: -6vw;
}

.port h1{
	font-size: 5vw;
	padding-top: 6vw;
	color: #543005;
	top: 0;
}

.port h4{
	font-size: 3vw;
	color: #8c510a;
}

.port p{
	font-size: 1.2vw;
	color: #8c510a;
	padding-bottom: 3vw;
	padding-left: 5vw;
	padding-right: 5vw;
}

.nello{
	width: 100%;
	padding-bottom: 3vw;
}

.nello img{
	width: 40%;
	// float: left;
	margin-left: 2.5%;
	margin-right: 2.5%;
	box-shadow: .1vw .1vw .1vw .1vw #fc4e2a;
}

.tShare{
	width: 100%;
	// padding-bottom: 1vw;
}

.tShare img{
	width: 40%;
	// float: left;
	margin-left: 2.5%;
	margin-right: 2.5%;
	margin-bottom: 5vw;
	// border: .1vw solid red;
	box-shadow: .1vw .1vw .1vw .1vw #fc4e2a;
}

.lib{
	width: 100%;
	padding-bottom: 3vw;
}

.lib img{
	width: 40%;
	// float: left;
	margin-left: 2.5%;
	margin-right: 2.5%;
	box-shadow: .1vw .1vw .1vw .1vw #fc4e2a;
}

.contact{
	padding-bottom: 3vw;
	background-color: #ffffe5;
}

.contact h1{
	font-size: 5vw;
	color: #543005;
	// top: 0;
	text-align: center;
}

.contact h3{
	font-size: 2vw;
	color: #8c510a;
	text-align: center;
}

.contact label{
	color: #8c510a;
}

#viewPort{
	width: 25vw;
	height: 5vw;
	background-color: #bd0026;
	display: block;
	border-radius: 2vw;
}

#viewPort h2{
	display: inline-block;
	font-size: 3vw;
	margin: 0 !important;
	padding-top: .8vw;
	color: #ffffe5 !important;
}

#viewPort:hover{
	text-decoration: none;
	background-color: #fd8d3c;
}

.backing a{
	text-align: center;
	margin-left: auto;
  margin-right: auto;

}

.backing{
	background-color: #ffffe5;
}

.line5{
	position: relative;
	background-color: #fc4e2a;
	// top: 6%;
	width: 64%;
	height: .2vw;
	display: block;
  margin-left: auto;
  margin-right: auto;
	// margin-top: 3vw;
}

.line6{
	position: relative;
	top: 1vw;
	background-color: #fc4e2a;
	// top: 6%;
	width: 64%;
	height: .2vw;
	display: block;
  margin-left: auto;
  margin-right: auto;
}

.lines{
	background-color: #ffffe5;
	padding-top: 3vw;
}

.lines2{
	background-color: #ffffe5;
	padding-top: 2vw;
	padding-bottom: 3vw;
}

.CWapp1{
	width: 100%;
}

.CWapp1 img{
	width: 28%;
	margin: 2vw;
	box-shadow: .1vw .1vw .1vw .1vw #fc4e2a;
}

